--- a/src/webapp/css/app.css
+++ b/src/webapp/css/app.css
@@ -146,3 +146,20 @@ ul.objective-list > li {
     padding-top: 3px;
     padding-bottom: 3px;
 }
+
+div.flashcard-page {
+    background-color: #3B653D;
+    padding: 20px;
+    border: solid #000000;
+    border-width: 3px;
+    border-radius: 20px;
+    text-align: center;
+    margin-top: 30px;
+}
+
+div.flashcard-page p {
+    font-weight: bold;
+    font-size: 40px;
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
