--- a/src/webapp/css/app.css
+++ b/src/webapp/css/app.css
@@ -149,6 +149,7 @@ ul.objective-list > li {
 
 div.flashcard-page {
     background-color: #3B653D;
+    color: white;
     padding: 20px;
     border: solid #000000;
     border-width: 3px;
