--- a/src/webapp/css/app.css
+++ b/src/webapp/css/app.css
@@ -148,20 +148,36 @@ ul.objective-list > li {
 }
 
 div.flashcard-page {
-    background-color: #3B653D;
-    color: white;
-    padding: 20px;
-    border: solid #000000;
-    border-width: 3px;
-    border-radius: 20px;
-    text-align: center;
-    margin-top: 30px;
 }
 
-div.flashcard-page p {
+div.flashcard {
+    width: 800px;
+    height: 600px;
+    background-color: #3B653D;
+    color: white;
+    padding: 0;
+    margin: 0;
+    border: solid #000000;
+    border-width: 3px;
+    /* float: none; */
+    /* display: inline-block; */
+}
+
+div.flashcard-text {
     font-weight: bold;
     line-height: 40px;
     font-size: 40px;
-    padding-top: 60px;
-    padding-bottom: 80px;
+    position: relative;
+    top: 80px;
+    text-align: center;
+}
+
+div.flashcard-nav {
+    width: 800px;
+    text-align: center;
+    position: absolute;
+    bottom: 10px;
+}
+
+div.flashcard-status {
 }
