--- a/src/ansible/init-script.j2
+++ b/src/ansible/init-script.j2
@@ -3,7 +3,7 @@
 SERVICE_NAME={{ project_name }}-app
 PIDFILE={{ log_dir }}/{{ project_name }}.pid
 UWSGI_INI={{ log_dir }}/{{ project_name }}.ini
-UWSGI_ENV={{ remote_checkout }}/envs/{{ project_name }}
+UWSGI_ENV={{ virtualenv_dir }}
 
 . ${UWSGI_ENV}/bin/activate
 
