Fix start/restart of Python application

--- a/src/ansible/init-script.j2
+++ b/src/ansible/init-script.j2
@@ -24,6 +24,8 @@ start_service() {
 stop_service() {
     echo " * Stopping $SERVICE_NAME..."
     uwsgi --stop $PIDFILE
+    sleep 1
+    rm $PIDFILE
 }
 
 status_service() {
