Update to (my) latest init script template

--- a/src/ansible/init-script.j2
+++ b/src/ansible/init-script.j2
@@ -7,33 +7,76 @@ UWSGI_ENV={{ virtualenv_dir }}
 
 . ${UWSGI_ENV}/bin/activate
 
-start_service() {
-    if test -f "$PIDFILE"; then
-        echo " * $SERVICE_NAME pid file already exists..."
-        PID=`cat $PIDFILE`
-        if kill -0 $PID 2>/dev/null; then
-            echo " * $SERVICE_NAME is already running"
-            exit 1
-        fi
-        rm $PIDFILE
+is_running() {
+    if ! test -f "$PIDFILE"; then
+        return 1
     fi
+
+    PID=`cat $PIDFILE 2>/dev/null`
+    if test -z "$PID"; then
+        return 1
+    fi
+
+    if ps $PID >/dev/null 2>&1; then
+        return 0
+    fi
+
+    return 1
+}
+
+start_service() {
+    if is_running; then
+        echo " * $SERVICE_NAME is already running"
+        exit 1
+    fi
+
     echo -n " * Starting $SERVICE_NAME..."
     uwsgi $UWSGI_INI
+    for sleep_before_check in 1 1 1 2 2 2; do
+        sleep $sleep_before_check
+        echo -n "."
+        if is_running; then
+            break
+        fi
+    done
+    echo ""
+
+    if ! is_running; then
+        echo " * $SERVICE_NAME did not start (yet)"
+        exit 1
+    fi
 }
 
 stop_service() {
-    echo " * Stopping $SERVICE_NAME..."
+    if ! is_running; then
+        echo " * $SERVICE_NAME is not running"
+        exit 1
+    fi
+
+    echo -n " * Stopping $SERVICE_NAME..."
     uwsgi --stop $PIDFILE
-    sleep 1
-    rm $PIDFILE
+    for sleep_before_retry in 1 1 1 2 2 2 3 4 5 6 10; do
+        if ! is_running; then
+            break
+        fi
+        sleep $sleep_before_retry
+        echo -n "."
+    done
+    echo ""
+
+    if is_running; then
+        echo " * $SERVICE_NAME did not stop (yet)"
+        exit 1
+    else
+        rm $PIDFILE
+    fi
 }
 
 status_service() {
-    PID=`cat $PIDFILE`
-    if kill -0 $PID 2>/dev/null; then
-        echo "Running"
+    if is_running; then
+        echo " * $SERVICE_NAME is running"
     else
-        echo "Not running"
+        echo " * $SERVICE_NAME is not running"
         exit 1
     fi
 }
@@ -49,7 +92,9 @@ case "$1" in
     stop_service
     ;;
   restart)
-    stop_service
+    if is_running; then
+      stop_service
+    fi
     start_service
     ;;
   *)
