Upgrade Django from 1.9.13 to 1.10.8

--- a/src/edurepo/teachers/templates/teachers/add_objective.html
+++ b/src/edurepo/teachers/templates/teachers/add_objective.html
@@ -3,7 +3,7 @@
 {% block title %}Add an objective{% endblock %}
 {% block content %}
     <h1>Add an objective for {{ date }}</h1>
-    <form action="{% url 'teachers.views.add_objective' teacher_email=teacher_email teacher_class_id=teacher_class_id date=date%}" method="post">
+    <form action="{% url 'add-objective' teacher_email=teacher_email teacher_class_id=teacher_class_id date=date%}" method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
         {% buttons %}
