--- a/src/edurepo/teachers/templates/teachers/add_class.html
+++ b/src/edurepo/teachers/templates/teachers/add_class.html
@@ -3,7 +3,7 @@
 {% block title %}Add a class{% endblock %}
 {% block content %}
     <h1>Add a class</h1>
-    <form action="{% url 'teachers.views.add_class' teacher_email=teacher_email%}" method="post">
+    <form action="{% url 'add-class' teacher_email=teacher_email%}" method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
         {% buttons %}
