--- a/src/edurepo/templates/base.html
+++ b/src/edurepo/templates/base.html
@@ -35,9 +35,9 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Setup <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="{% url 'teachers.views.register_teacher' %}">Register as teacher</a></li>
+                            <li><a href="{% url 'register-teacher' %}">Register as teacher</a></li>
                             {% for de in dashboard_emails %}
-                                <li><a href="{% url 'teachers.views.add_class' teacher_email=de %}">Add class ({{ de }})</a></li>
+                                <li><a href="{% url 'add-class' teacher_email=de %}">Add class ({{ de }})</a></li>
                             {% endfor %}
                         </ul>
                     </li>
